# MultiEndpointTox

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: config.yaml
data/: test_compounds.csv  tmp_with_target.csv
data/processed/: ames_split_indices.npz  cytotox_split_indices.npz  hepatotox_split_indices.npz  herg_split_indices.npz  nephrotox_split_indices.npz  reproductive_tox_split_indices.npz  skin_sens_split_indices.npz
docs/: API.md  examples.py
notebooks/: MultiEndpointTox_Demo.ipynb
reports/: MultiEndpointTox_Comprehensive_Report.md  ames_validation_report.json  ames_validation_report.md  cytotox_validation_report.json  cytotox_validation_report.md  hepatotox_validation_report.json  hepatotox_validation_report.md  herg_validation_report.json  herg_validation_report.md  nephrotox_validation_report.json  nephrotox_validation_report.md  reproductive_tox_validation_report.json  reproductive_tox_validation_report.md  skin_sens_validation_report.json  skin_sens_validation_report.md
scripts/: batch_docking.py  build_3d_descriptor_matrix.py  check_fs.py  compare_2d_3d_models.py  compare_2d_3d_regression.py  generate_report.py  predict.py  prepare_chemprop_herg_regression_dataset.py  run_chemprop_herg_regression.py  test_3d_descriptors.py  test_api.ps1  test_api.py  test_docking.py
src/: main.py
tests/: test_api.py  test_data_curation.py  test_predictor.py
(+177 files in other folders)
