[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-endpoint-tox"
version = "0.1.0"
description = "Integrated ML Prediction of Cardiotoxicity, Hepatotoxicity and Nephrotoxicity"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Sharhabil"}]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
